- Added `about.md` page

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-slate
-title: James E. Torres' homepage.
-description: Welcome! And thank you for visiting my personal website.
+title: James E. Torres
+description: Hello, and welcome!
 author: James E. Torres
