- Updates:   - Added more Markdown content for new pages.   - Modified default layout to include navigation section.   - Minor config updates, assets, data.

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,7 @@
+description: Software Engineer
+author: James E. Torres
 theme: jekyll-theme-slate
 title: James E. Torres
-description: Hello, and welcome!
-author: James E. Torres
+url: "https://torresjamese.github.io"
+disable_disk_cache: true
+exclude: [.jekyll-cache, GemFile, Gemfile.lock]
