- Enabled `resume` page; renamed PDF file.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,5 +7,5 @@ pages:
     url: /about.html
   - title: Contact Me
     url: /contact.html
-  # - title: Resume
-  #   url: /resume.html
+  - title: Resume
+    url: /resume.html
