- Minor improvements; added compression of generated css files. Content   updates.

--- a/_config.yml
+++ b/_config.yml
@@ -7,3 +7,6 @@ disable_disk_cache: true
 exclude: [.jekyll-cache, GemFile, Gemfile.lock]
 plugins:
   - jemoji
+sass:
+  sass_dir: assets/css
+  style: compressed
